--- a/pages/terms-of-use.mdx
+++ b/pages/terms-of-use.mdx
@@ -1,3 +1,12 @@
+export const pageLayout = "slim";
+import SlimLayout from "../components/layout-slim";
+import heroBgImg from "public/images/heros/blue-lines.jpg";
+
+export const meta = {
+  author: "Rich Haines",
+  pageTitle: "Terms of Use",
+};
+
 **KeepKey Terms of Service**
 
 Welcome to KeepKey.com which is owned and
@@ -22,66 +31,66 @@ incorporated into these Terms by reference.
 
 Please read this agreement carefully to ensure that you understand each provision.
 
-1. Use of Our Service
-2. **Eligibility.** This is a contract between you and
-   KeepKey. You must read and agree to these Terms before using the
-   Service. If you do not agree, you may not use the Service. You may use
-   the Service only if you can form a legally binding contract with
-   KeepKey, and only if you are in compliance with these Terms and all
-   applicable local, state, national, and international laws, rules and
-   regulations. Any use or access to the Service by anyone under 18 is
-   strictly prohibited and in violation of these Terms. The Service is not
-   available to any Users previously removed from the Service by KeepKey.
-3. **KeepKey Service.** The Service allows you to learn
-   about, purchase and submit inquiries for assistance with KeepKey
-   products. Subject to these Terms, you are hereby granted a
-   non-exclusive, limited, non-transferable, freely revocable license to
-   access and use the Service for your personal use only and as permitted
-   by the features of the Service. You are prohibited from using KeepKey
-   for any illegal or fraudulent purposes. KeepKey reserves all rights not
-   expressly granted herein in the Service and the KeepKey Content (as
-   defined below). KeepKey may terminate this license at any time for any
-   reason or no reason.
-4. **Service Rules.** You agree not to engage in any of
-   the following prohibited activities: (i) modifying, disassembling,
-   decompiling or reverse engineering the Service or the KeepKey products;
-   (ii) renting, leasing, loaning, reselling, sublicensing, or otherwise
-   transferring the Services to any third party; (iii) other than as
-   specifically approved in writing, any copying, distributing, or
-   disclosing any part of the Service in any medium, including without
-   limitation by any automated or non-automated “scraping”; (iv) other than as specifically approved in writing, using any automated system,
-   including without limitation “robots,” “spiders,” “offline readers,”
-   etc., to access the Service in a manner that sends more request messages to the KeepKey servers than a human can reasonably produce in the same
-   period of time by using a conventional on-line web browser (except that
-   KeepKey grants the operators of public search engines revocable
-   permission to use spiders to copy publicly available materials from the
-   Websites for the sole purpose of and solely to the extent necessary for
-   creating publicly available searchable indices of the materials, but not caches or archives of such materials); (v) transmitting spam, chain
-   letters, or other unsolicited email; (vi) attempting to interfere with,
-   compromise the system integrity or security or decipher any
-   transmissions to or from the servers running the Service; (vii) taking
-   any action that imposes, or may impose at our sole discretion an
-   unreasonable or disproportionately large load on our infrastructure;
-   (viii) uploading invalid data, viruses, worms, or other software agents
-   through the Service; (ix) collecting or harvesting any personally
-   identifiable information, including account names, from the Service; (x) using the Service for any commercial solicitation purposes; (xi)
-   impersonating another person or otherwise misrepresenting your
-   affiliation with a person or entity, conducting fraud, hiding or
-   attempting to hide your identity; (xii) interfering with the proper
-   working of the Service; (xiii) accessing any content on the Service
-   through any technology or means other than those provided or authorized
-   by the Service; (xiv) bypassing the measures we may use to prevent or
-   restrict access to the Service, including without limitation removing,
-   circumventing, disabling or otherwise interfering with security-related
-   features or features that prevent or restrict use or copying of any
-   content or enforce limitations on use of the Service or the content
-   therein; or (xv) deleting the copyright and other proprietary rights
-   notices.
-5. **Prohibited Activity.** In connection with your use of the Service, and your interactions with other Users, and third parties
-   you agree and represent you will not engage in any prohibited business
-   or prohibited use, as discussed in these Terms of Service (“Prohibited
-   Activity”). The list of Prohibited Activities may be updated by KeepKey
-   at any time at its discretion.
+1.  Use of Our Service
+2.  **Eligibility.** This is a contract between you and
+    KeepKey. You must read and agree to these Terms before using the
+    Service. If you do not agree, you may not use the Service. You may use
+    the Service only if you can form a legally binding contract with
+    KeepKey, and only if you are in compliance with these Terms and all
+    applicable local, state, national, and international laws, rules and
+    regulations. Any use or access to the Service by anyone under 18 is
+    strictly prohibited and in violation of these Terms. The Service is not
+    available to any Users previously removed from the Service by KeepKey.
+3.  **KeepKey Service.** The Service allows you to learn
+    about, purchase and submit inquiries for assistance with KeepKey
+    products. Subject to these Terms, you are hereby granted a
+    non-exclusive, limited, non-transferable, freely revocable license to
+    access and use the Service for your personal use only and as permitted
+    by the features of the Service. You are prohibited from using KeepKey
+    for any illegal or fraudulent purposes. KeepKey reserves all rights not
+    expressly granted herein in the Service and the KeepKey Content (as
+    defined below). KeepKey may terminate this license at any time for any
+    reason or no reason.
+4.  **Service Rules.** You agree not to engage in any of
+    the following prohibited activities: (i) modifying, disassembling,
+    decompiling or reverse engineering the Service or the KeepKey products;
+    (ii) renting, leasing, loaning, reselling, sublicensing, or otherwise
+    transferring the Services to any third party; (iii) other than as
+    specifically approved in writing, any copying, distributing, or
+    disclosing any part of the Service in any medium, including without
+    limitation by any automated or non-automated “scraping”; (iv) other than as specifically approved in writing, using any automated system,
+    including without limitation “robots,” “spiders,” “offline readers,”
+    etc., to access the Service in a manner that sends more request messages to the KeepKey servers than a human can reasonably produce in the same
+    period of time by using a conventional on-line web browser (except that
+    KeepKey grants the operators of public search engines revocable
+    permission to use spiders to copy publicly available materials from the
+    Websites for the sole purpose of and solely to the extent necessary for
+    creating publicly available searchable indices of the materials, but not caches or archives of such materials); (v) transmitting spam, chain
+    letters, or other unsolicited email; (vi) attempting to interfere with,
+    compromise the system integrity or security or decipher any
+    transmissions to or from the servers running the Service; (vii) taking
+    any action that imposes, or may impose at our sole discretion an
+    unreasonable or disproportionately large load on our infrastructure;
+    (viii) uploading invalid data, viruses, worms, or other software agents
+    through the Service; (ix) collecting or harvesting any personally
+    identifiable information, including account names, from the Service; (x) using the Service for any commercial solicitation purposes; (xi)
+    impersonating another person or otherwise misrepresenting your
+    affiliation with a person or entity, conducting fraud, hiding or
+    attempting to hide your identity; (xii) interfering with the proper
+    working of the Service; (xiii) accessing any content on the Service
+    through any technology or means other than those provided or authorized
+    by the Service; (xiv) bypassing the measures we may use to prevent or
+    restrict access to the Service, including without limitation removing,
+    circumventing, disabling or otherwise interfering with security-related
+    features or features that prevent or restrict use or copying of any
+    content or enforce limitations on use of the Service or the content
+    therein; or (xv) deleting the copyright and other proprietary rights
+    notices.
+5.  **Prohibited Activity.** In connection with your use of the Service, and your interactions with other Users, and third parties
+    you agree and represent you will not engage in any prohibited business
+    or prohibited use, as discussed in these Terms of Service (“Prohibited
+    Activity”). The list of Prohibited Activities may be updated by KeepKey
+    at any time at its discretion.
 
 We also reserve the right at all times to monitor, review, retain
 and/or disclose any information as necessary to satisfy any applicable
@@ -90,27 +99,27 @@ request. We reserve the right to block transactions or freeze funds
 immediately and without notice if we determine, in our sole discretion,
 that your Account is associated with a Prohibited Activity.
 
-1. Purchase of a KeepKey product
-2. **Cancellations.** You may generally cancel the order
-   of a KeepKey hardware wallet within 72 hours of purchase. Please see our Customer Support page for more details: [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us).
-3. **Returns and Refunds.** KeepKey will provide returns and refunds solely in accordance with its policies found on the Customer Support page: [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us).
-4. **Taxes.** KeepKey is not responsible for, nor can we
-   offer, any specific advice regarding any taxes or customs related fees
-   that you may incur or be liable to pay by purchasing a device. It is
-   your sole responsibility to determine whether, and to what extent, any
-   taxes apply to any transactions you conduct through the Service. For
-   more information, please visit the KeepKey Customer Support page: [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us).
-5. **No Sales to Children.** KeepKey’s Service is not for
-   children, but only for adults. If you are under eighteen (18) years of
-   age, you may use the Service only with involvement and consent of a
-   parent or legal guardian.
-6. **California Residents.** The provider of services is
-   set forth herein. If you are a California resident, in accordance with
-   Cal. Civ. Code §1789.3, you may report complaints to the Complaint
-   Assistance Unit of the Division of Consumer Services of the California
-   Department of Consumer Affairs by contacting them in writing at 1625
-   North Market Blvd., Suite N 112 Sacramento, CA 95834, or by telephone at (800) 952-5210 or (916) 445-1254.
-7. User Content
+1.  Purchase of a KeepKey product
+2.  **Cancellations.** You may generally cancel the order
+    of a KeepKey hardware wallet within 72 hours of purchase. Please see our Customer Support page for more details: [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us).
+3.  **Returns and Refunds.** KeepKey will provide returns and refunds solely in accordance with its policies found on the Customer Support page: [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us).
+4.  **Taxes.** KeepKey is not responsible for, nor can we
+    offer, any specific advice regarding any taxes or customs related fees
+    that you may incur or be liable to pay by purchasing a device. It is
+    your sole responsibility to determine whether, and to what extent, any
+    taxes apply to any transactions you conduct through the Service. For
+    more information, please visit the KeepKey Customer Support page: [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us).
+5.  **No Sales to Children.** KeepKey’s Service is not for
+    children, but only for adults. If you are under eighteen (18) years of
+    age, you may use the Service only with involvement and consent of a
+    parent or legal guardian.
+6.  **California Residents.** The provider of services is
+    set forth herein. If you are a California resident, in accordance with
+    Cal. Civ. Code §1789.3, you may report complaints to the Complaint
+    Assistance Unit of the Division of Consumer Services of the California
+    Department of Consumer Affairs by contacting them in writing at 1625
+    North Market Blvd., Suite N 112 Sacramento, CA 95834, or by telephone at (800) 952-5210 or (916) 445-1254.
+7.  User Content
 
 We do not claim ownership of user-generated content and material. Any
 and all photographs, articles, images, graphics, videos, sounds, music,
@@ -215,7 +224,7 @@ transmit through the Service. You should take measures to preserve
 copies of any data, material, content or information you post on the
 Service or any other sites or platforms.
 
-1. Our Proprietary Rights
+1.  Our Proprietary Rights
 
 Except for your User Content, the Service and all materials therein
 or transferred thereby, including, without limitation, software, images,
@@ -254,7 +263,7 @@ submission, KeepKey does not waive any rights to use similar or related
 ideas previously known to KeepKey, or developed by its employees, or
 obtained from sources other than you.
 
-1. Privacy
+1.  Privacy
 
 KeepKey respects the privacy of its users by not requesting any
 information that is unnecessary for the use of the Service or to comport
@@ -275,7 +284,7 @@ accepting these Terms, you expressly allow us to export data outside of
 the jurisdiction in which you reside or are located when you access the
 Website and our Services.
 
-1. Security
+1.  Security
 
 KeepKey cares about the integrity and security of your personal
 information, and stores all personal information provided by users in an
@@ -284,7 +293,7 @@ parties will never be able to defeat our security measures or use your
 personal information for improper purposes. You acknowledge that you
 provide your personal information at your own risk.
 
-1. Third-Party Links and Information
+1.  Third-Party Links and Information
 
 The Service may contain links to third-party materials that are not
 owned or controlled by KeepKey. KeepKey does not endorse or assume any
@@ -303,7 +312,7 @@ and such advertisers. You agree that KeepKey shall not be responsible
 for any loss or damage of any sort relating to your dealings with such
 advertisers.
 
-1. Suspension, Termination and Cancellation
+1.  Suspension, Termination and Cancellation
 
 We may, without prior notice, suspend the Service, change the
 Service; stop providing the Service or features of the Service, to you
@@ -341,7 +350,7 @@ and security protocols. You agree that KeepKey is under no obligation to
 disclose the details of its risk management and security procedures to
 you.
 
-1. Indemnity
+1.  Indemnity
 
 You agree to defend, indemnify and hold harmless KeepKey and its
 subsidiaries, agents, licensors, managers, and other affiliated
@@ -361,7 +370,7 @@ your willful misconduct; or (g) any other party’s access and use of the
 Service with your unique username, password or other appropriate
 security code.
 
-1. No Warranty
+1.  No Warranty
 
 The Service is provided on an “as is” and “as available” basis. Use
 of the Service is at your own risk. To the maximum extent permitted by
@@ -399,7 +408,7 @@ For more information on warranties associated with physical KeepKey
 products, please visit our Customer Support Center by clicking the
 following link: [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us).
 
-1. Limitation of Liability
+1.  Limitation of Liability
 
 To the maximum extent permitted by applicable law, in no event shall
 KeepKey, its affiliates, agents, directors, employees, suppliers or
@@ -445,77 +454,88 @@ state or jurisdiction. The disclaimers, exclusions, and limitations of
 liability under this agreement will not apply to the extent prohibited
 by applicable law.
 
-1. Governing Law, Arbitration
-2. **Governing Law.** These Terms shall be governed by the internal substantive laws of the State of Delaware, without respect to
-   its conflict of laws principles, except to the extent Delaware state law is preempted by federal law. Notwithstanding the preceding sentences
-   with respect to the substantive law, any arbitration conducted pursuant
-   to the terms of these Terms shall be governed by the applicable rules of arbitration in the State of Delaware. You agree to submit to the
-   personal jurisdiction of the federal and state courts located in
-   Delaware for any actions for which we retain the right to seek
-   injunctive or other equitable relief in a court of competent
-   jurisdiction to prevent the actual or threatened infringement,
-   misappropriation or violation of our copyrights, trademarks, trade
-   secrets, patents, or other intellectual property or proprietary rights,
-   as set forth in the Arbitration provision below, including any
-   provisional relief required to prevent irreparable harm. You agree that
-   the State of Delaware is the proper forum for any appeals of an
-   arbitration award or for trial court proceedings in the event that the
-   arbitration provision below is found to be unenforceable.
-3. **Arbitration.** Read this section carefully because it requires the parties to arbitrate their disputes and limits the manner
-   in which you can seek relief from KeepKey. For any dispute with KeepKey, you agree to first contact us at [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us) and attempt to resolve the dispute with us informally. In the unlikely
-   event that KeepKey has not been able to resolve a dispute it has with
-   you after sixty (60) days, we each agree to resolve any claim, dispute,
-   or controversy (excluding any claims for injunctive or other equitable
-   relief as provided below) arising out of or in connection with or
-   relating to these Terms, or the breach or alleged breach thereof
-   (collectively, “Claims”), by binding arbitration in accordance with the
-   applicable rules of arbitration in the State of Delaware. The
-   arbitration will be conducted in Delaware, in English, unless you and
-   KeepKey agree otherwise. If you are using the Service for commercial
-   purposes, each party will be responsible for paying any arbitration
-   fees, administrative and arbitrator fees in accordance with applicable
-   arbitration rules, and the award rendered by the arbitrator shall
-   include costs of arbitration, reasonable attorneys’ fees and reasonable
-   costs for expert and other witnesses. If you are an individual using the Service for non-commercial purposes: (i) the arbitration organization
-   may require you to pay a fee for the initiation of your case, unless you apply for and successfully obtain a fee waiver from such arbitration
-   organization; (ii) the award rendered by the arbitrator may include your costs of arbitration, your reasonable attorney’s fees, and your
-   reasonable costs for expert and other witnesses; and (iii) you may sue
-   in a small claims court of competent jurisdiction without first engaging in arbitration, but this does not absolve you of your commitment to
-   engage in the informal dispute resolution process. Any judgment on the
-   award rendered by the arbitrator may be entered in any court of
-   competent jurisdiction. Nothing in this Section shall be deemed as
-   preventing KeepKey from seeking injunctive or other equitable relief
-   from the courts as necessary to prevent the actual or threatened
-   infringement, misappropriation, or violation of our data security,
-   Intellectual Property Rights or other proprietary rights.
-4. General
-5. **Assignment.** These Terms, and any rights and
-   licenses granted hereunder, may not be transferred or assigned by you,
-   but may be assigned by KeepKey without restriction. Any attempted
-   transfer or assignment in violation hereof shall be null and void.
-6. **Notification Procedures and Changes to these Terms.** KeepKey may provide notifications, whether such notifications are required by
-   law or are for marketing or other business related purposes, to you via
-   email notice, written or hard copy notice, or through posting of such
-   notice on our website, as determined by KeepKey in our sole discretion.
-   KeepKey reserves the right to determine the form and means of providing
-   notifications to our Users, provided that you may opt out of certain
-   means of notification as described in these Terms. KeepKey is not
-   responsible for any automatic filtering you or your network provider may apply to email notifications we send to the email address you provide
-   us. KeepKey may, in its sole discretion, modify or update these Terms
-   from time to time, and so you should review this page periodically. When we change these Terms in a material manner, we will update the ‘last
-   modified’ date at the bottom of this page and notify you that material
-   changes have been made to these Terms. Your continued use of the Service after any such change constitutes your acceptance of the new Terms of
-   Service. If you do not agree to any of these terms or any future Terms
-   of Service, do not use or access (or continue to access) the Service.
-7. **Entire Agreement/Severability.** These Terms,
-   together with any additional terms, amendments and any additional
-   agreements you may enter into with KeepKey in connection with the
-   Service, shall constitute the entire agreement between you and KeepKey
-   concerning the Service. If any provision of these Terms is deemed
-   invalid by a court of competent jurisdiction, the invalidity of such
-   provision shall not affect the validity of the remaining provisions of
-   these Terms, which shall remain in full force and effect.
-8. **No Waiver.** No waiver of any term of these Terms
-   shall be deemed a further or continuing waiver of such term or any other term, and KeepKey’s failure to assert any right or provision under
-   these Terms shall not constitute a waiver of such right or provision.
-9. **Contact.** Please contact us by submitting a request to us at [https://keepkey.zendesk.com/hc/en-us/requests/new](https://keepkey.zendesk.com/hc/en-us/requests/new) with any questions regarding these Terms.
+1.  Governing Law, Arbitration
+2.  **Governing Law.** These Terms shall be governed by the internal substantive laws of the State of Delaware, without respect to
+    its conflict of laws principles, except to the extent Delaware state law is preempted by federal law. Notwithstanding the preceding sentences
+    with respect to the substantive law, any arbitration conducted pursuant
+    to the terms of these Terms shall be governed by the applicable rules of arbitration in the State of Delaware. You agree to submit to the
+    personal jurisdiction of the federal and state courts located in
+    Delaware for any actions for which we retain the right to seek
+    injunctive or other equitable relief in a court of competent
+    jurisdiction to prevent the actual or threatened infringement,
+    misappropriation or violation of our copyrights, trademarks, trade
+    secrets, patents, or other intellectual property or proprietary rights,
+    as set forth in the Arbitration provision below, including any
+    provisional relief required to prevent irreparable harm. You agree that
+    the State of Delaware is the proper forum for any appeals of an
+    arbitration award or for trial court proceedings in the event that the
+    arbitration provision below is found to be unenforceable.
+3.  **Arbitration.** Read this section carefully because it requires the parties to arbitrate their disputes and limits the manner
+    in which you can seek relief from KeepKey. For any dispute with KeepKey, you agree to first contact us at [https://keepkey.zendesk.com/hc/en-us](https://keepkey.zendesk.com/hc/en-us) and attempt to resolve the dispute with us informally. In the unlikely
+    event that KeepKey has not been able to resolve a dispute it has with
+    you after sixty (60) days, we each agree to resolve any claim, dispute,
+    or controversy (excluding any claims for injunctive or other equitable
+    relief as provided below) arising out of or in connection with or
+    relating to these Terms, or the breach or alleged breach thereof
+    (collectively, “Claims”), by binding arbitration in accordance with the
+    applicable rules of arbitration in the State of Delaware. The
+    arbitration will be conducted in Delaware, in English, unless you and
+    KeepKey agree otherwise. If you are using the Service for commercial
+    purposes, each party will be responsible for paying any arbitration
+    fees, administrative and arbitrator fees in accordance with applicable
+    arbitration rules, and the award rendered by the arbitrator shall
+    include costs of arbitration, reasonable attorneys’ fees and reasonable
+    costs for expert and other witnesses. If you are an individual using the Service for non-commercial purposes: (i) the arbitration organization
+    may require you to pay a fee for the initiation of your case, unless you apply for and successfully obtain a fee waiver from such arbitration
+    organization; (ii) the award rendered by the arbitrator may include your costs of arbitration, your reasonable attorney’s fees, and your
+    reasonable costs for expert and other witnesses; and (iii) you may sue
+    in a small claims court of competent jurisdiction without first engaging in arbitration, but this does not absolve you of your commitment to
+    engage in the informal dispute resolution process. Any judgment on the
+    award rendered by the arbitrator may be entered in any court of
+    competent jurisdiction. Nothing in this Section shall be deemed as
+    preventing KeepKey from seeking injunctive or other equitable relief
+    from the courts as necessary to prevent the actual or threatened
+    infringement, misappropriation, or violation of our data security,
+    Intellectual Property Rights or other proprietary rights.
+4.  General
+5.  **Assignment.** These Terms, and any rights and
+    licenses granted hereunder, may not be transferred or assigned by you,
+    but may be assigned by KeepKey without restriction. Any attempted
+    transfer or assignment in violation hereof shall be null and void.
+6.  **Notification Procedures and Changes to these Terms.** KeepKey may provide notifications, whether such notifications are required by
+    law or are for marketing or other business related purposes, to you via
+    email notice, written or hard copy notice, or through posting of such
+    notice on our website, as determined by KeepKey in our sole discretion.
+    KeepKey reserves the right to determine the form and means of providing
+    notifications to our Users, provided that you may opt out of certain
+    means of notification as described in these Terms. KeepKey is not
+    responsible for any automatic filtering you or your network provider may apply to email notifications we send to the email address you provide
+    us. KeepKey may, in its sole discretion, modify or update these Terms
+    from time to time, and so you should review this page periodically. When we change these Terms in a material manner, we will update the ‘last
+    modified’ date at the bottom of this page and notify you that material
+    changes have been made to these Terms. Your continued use of the Service after any such change constitutes your acceptance of the new Terms of
+    Service. If you do not agree to any of these terms or any future Terms
+    of Service, do not use or access (or continue to access) the Service.
+7.  **Entire Agreement/Severability.** These Terms,
+    together with any additional terms, amendments and any additional
+    agreements you may enter into with KeepKey in connection with the
+    Service, shall constitute the entire agreement between you and KeepKey
+    concerning the Service. If any provision of these Terms is deemed
+    invalid by a court of competent jurisdiction, the invalidity of such
+    provision shall not affect the validity of the remaining provisions of
+    these Terms, which shall remain in full force and effect.
+8.  **No Waiver.** No waiver of any term of these Terms
+    shall be deemed a further or continuing waiver of such term or any other term, and KeepKey’s failure to assert any right or provision under
+    these Terms shall not constitute a waiver of such right or provision.
+9.  **Contact.** Please contact us by submitting a request to us at [https://keepkey.zendesk.com/hc/en-us/requests/new](https://keepkey.zendesk.com/hc/en-us/requests/new) with any questions regarding these Terms.
+
+export default ({ children }) => (
+   <SlimLayout 
+      meta={meta}
+      
+   >
+
+      {children}
+
+   </SlimLayout>
+);
