add community data

--- a/pages/privacy-policy.mdx
+++ b/pages/privacy-policy.mdx
@@ -2,7 +2,7 @@ import heroBgImg from "public/images/heros/blue-lines.jpg";
 import BasicPageWrap from "../components/basic-page-wrap";
 
 export const meta = {
-  pageTitle: "Privacty Policy",
+  pageTitle: "Privacy Policy",
 };
 
 export default ({ children }) => (
